changed the addresses from span2's to divs...don't know if this is any better

--- a/sites/all/themes/clim/sass/_cirro.sass
+++ b/sites/all/themes/clim/sass/_cirro.sass
@@ -336,8 +336,14 @@ article.content-section
 				color: $pink	
 	
 #addresses
+	position: absolute
+	margin: 0 auto
 	h5
-		margin-bottom: 0		
+		margin-bottom: 0	
+	.address
+		float: left	
+		margin: 0 25px
+
 
 .page-user
 	.login-wrap
