--- a/sites/all/themes/clim/sass/responsive.sass
+++ b/sites/all/themes/clim/sass/responsive.sass
@@ -619,7 +619,36 @@
 			[data-icon]:before
 				font-size: 22px
 	#logo
-		width: 62px
+		width: 66px
+	#companies .content-section .buildings-wrapper .building .companies-list
+		-moz-column-count: 2
+		-webkit-column-count: 2
+		column-count: 2
+
+	h1
+		font-size: 27px
+		margin-bottom: 15px
+	h3
+		font-size: 19px
+	hr
+		margin: 0 auto 22px auto
+	article.content-section
+		margin-left: -20px
+	.body-text
+		width: 74%
+
+@media (max-width: 480px) and (orientation: landscape)
+	#social
+		bottom: 1px
+	#main-menu
+		ul
+			li
+				margin-bottom: 0px
+	article.content-section
+		margin-left: -39px
+	#about
+		margin-top: -113px
+
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 768px) and (orientation: portrait) 
 	.slide
