--- a/sites/all/themes/clim/css/main.css
+++ b/sites/all/themes/clim/css/main.css
@@ -1671,7 +1671,9 @@ article.content-section { padding: 100px 0; margin-bottom: 0; background: #edede
 #social .social-btn [data-icon]:before { font-family: "EntypoSocial"; font-size: 30px; font-weight: normal; content: attr(data-icon); }
 #social .social-btn [data-icon]:before:hover { color: #cd1076; }
 
+#addresses { position: absolute; margin: 0 auto; }
 #addresses h5 { margin-bottom: 0; }
+#addresses .address { float: left; margin: 0 25px; }
 
 .page-user .login-wrap { width: 300px; margin: 100px auto 0 auto; }
 .page-user .login-wrap input[type="text"], .page-user .login-wrap input[type="password"] { width: 88%; }
@@ -1902,6 +1904,16 @@ article.content-section { padding: 100px 0; margin-bottom: 0; background: #edede
   #social { right: 4px; }
   #social .social-btn { float: none; }
   #social .social-btn [data-icon]:before { font-size: 22px; }
-  #logo { width: 62px; } }
+  #logo { width: 66px; }
+  #companies .content-section .buildings-wrapper .building .companies-list { -moz-column-count: 2; -webkit-column-count: 2; column-count: 2; }
+  h1 { font-size: 27px; margin-bottom: 15px; }
+  h3 { font-size: 19px; }
+  hr { margin: 0 auto 22px auto; }
+  article.content-section { margin-left: -20px; }
+  .body-text { width: 74%; } }
+@media (max-width: 480px) and (orientation: landscape) { #social { bottom: 1px; }
+  #main-menu ul li { margin-bottom: 0px; }
+  article.content-section { margin-left: -39px; }
+  #about { margin-top: -113px; } }
 @media only screen and (min-device-width: 320px) and (max-device-width: 768px) and (orientation: portrait) { .slide { -webkit-background-size: auto 100%; } }
 @media only screen and (min-device-width: 320px) and (max-device-width: 768px) and (orientation: landscape) { .slide { -webkit-background-size: 100% auto; } }
