--- a/sites/all/themes/clim/sass/responsive.sass
+++ b/sites/all/themes/clim/sass/responsive.sass
@@ -624,7 +624,6 @@
 		-moz-column-count: 2
 		-webkit-column-count: 2
 		column-count: 2
-
 	h1
 		font-size: 27px
 		margin-bottom: 15px
@@ -636,6 +635,13 @@
 		margin-left: -20px
 	.body-text
 		width: 74%
+	#map
+		img
+			width: 86%
+		.tri-top
+			top: 175px
+	#map #map-info
+		margin-bottom: 42px
 
 @media (max-width: 480px) and (orientation: landscape)
 	#social
