--- a/sites/all/themes/clim/sass/_cirro.sass
+++ b/sites/all/themes/clim/sass/_cirro.sass
@@ -249,6 +249,7 @@ article.content-section
 			.building
 				border-bottom: 1px solid black
 				.accordionButton
+					clear: both
 					padding-bottom: 10px
 					h4
 						cursor: pointer
@@ -261,13 +262,11 @@ article.content-section
 				.companies-list
 					display: none
 					text-align: left
-					-moz-column-count: 3
-					-webkit-column-count: 3
-					column-count: 3
-					-moz-column-gap: 0px
-					-webkit-column-gap: 0px
-					column-gap: 0px
+					padding: 10px 0
+					overflow: hidden
 					.company-link
+						float: left
+						width: 250px
 						a
 							clear: both
 							color: black
