going to go back and see if this was happening before

--- a/sites/all/themes/clim/sass/_cirro.sass
+++ b/sites/all/themes/clim/sass/_cirro.sass
@@ -243,12 +243,18 @@ article.content-section
 		top: -200px
 	.content-section
 		overflow: hidden
+		height: auto
 		.buildings-wrapper
 			width: 80%
 			max-width: 800px
+			height: auto
+			overflow: hidden
 			.building
 				border-bottom: 1px solid black
+				overflow: hidden
+				height: auto
 				.accordionButton
+					overflow: hidden
 					clear: both
 					padding-bottom: 10px
 					h4
@@ -264,6 +270,7 @@ article.content-section
 					text-align: left
 					padding: 10px 0
 					overflow: hidden
+					height: auto
 					.company-link
 						float: left
 						width: 250px
@@ -273,8 +280,7 @@ article.content-section
 							p
 								font-size: 13px
 								line-height: 1em
-
-#contact
+	#contact
 	overflow-x: hidden
 	.tri-top
 		transform: rotate(8deg)
