--- a/sites/all/themes/clim/sass/_cirro.sass
+++ b/sites/all/themes/clim/sass/_cirro.sass
@@ -253,29 +253,34 @@ article.content-section
 				border-bottom: 1px solid black
 				overflow: hidden
 				height: auto
+				width: 100%
+				min-width: 100%
 				.accordionButton
 					overflow: hidden
 					clear: both
 					padding-bottom: 10px
+					height: 40px
 					h4
 						cursor: pointer
 						float: left
 					h5
 						text-align: right
 						font-size: 21px
-				.close
-					display: none
+					.plus-minus
+						overflow: hidden
+						height: auto
 				.companies-list
 					display: none
 					text-align: left
 					padding: 10px 0
 					overflow: hidden
 					height: auto
+					width: 100%
+					min-width: 100%
 					.company-link
 						float: left
 						width: 250px
 						a
-							clear: both
 							color: black
 							p
 								font-size: 13px
