--- a/sites/all/themes/climAdmin/css/main.css
+++ b/sites/all/themes/climAdmin/css/main.css
@@ -1563,6 +1563,11 @@ a.label:hover, a.badge:hover { color: white; text-decoration: none; cursor: poin
 
 .filter-help, .tips, .grippie { display: none; }
 
+.cirro-header { width: 100%; height: 25px; background: rgba(0, 0, 0, 0.7); overflow: hidden; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
+.cirro-header ul.cirro-header-links { float: right; margin: 2.5px 30px; }
+.cirro-header ul.cirro-header-links li { float: left; margin-right: 15px; }
+.cirro-header ul.cirro-header-links li a { color: white; font-weight: 600; }
+
 body.page-admin-dash h2 { border-bottom: 3px solid; }
 
 .dash-section { margin-bottom: 50px; }
