--- a/sites/all/themes/climAdmin/sass/_cirro.sass
+++ b/sites/all/themes/climAdmin/sass/_cirro.sass
@@ -9,6 +9,24 @@
 .grippie
 	display: none
 
+// Staff Header
+// ----------------------------------------------------------------------------
+.cirro-header
+	width: 100%
+	height: 25px
+	background: rgba(0,0,0,0.7)
+	overflow: hidden
+	font-family: $baseFontFamily
+	ul.cirro-header-links
+		float: right
+		margin: 2.5px 30px
+		li
+			float: left
+			margin-right: 15px
+			a
+				color: white
+				font-weight: 600
+
 // Dashboard
 // ----------------------------------------------------------------------------
 body.page-admin-dash h2
