--- a/sites/all/themes/clim/css/main.css
+++ b/sites/all/themes/clim/css/main.css
@@ -52,7 +52,7 @@ svg:not(:root) { overflow: hidden; }
 figure { margin: 0; }
 
 /* normalize.css v2.0.1 | Forms | MIT License | git.io/normalize */
-fieldset { border: 1px solid #c0c0c0; margin: 0 2px; padding: 0.35em 0.625em 0.75em; }
+fieldset { border: 1px solid silver; margin: 0 2px; padding: 0.35em 0.625em 0.75em; }
 
 legend { border: 0; padding: 0; }
 
@@ -1646,8 +1646,8 @@ article.content-section { padding: 100px 0; margin-bottom: 0; background: #edede
 #companies .content-section { overflow: hidden; }
 #companies .content-section .buildings-wrapper { width: 80%; max-width: 800px; }
 #companies .content-section .buildings-wrapper .building { border-bottom: 1px solid black; }
-#companies .content-section .buildings-wrapper .building .accordionButton { clear: both; padding-bottom: 10px; }
-#companies .content-section .buildings-wrapper .building .accordionButton h4 { cursor: pointer; float: left; }
+#companies .content-section .buildings-wrapper .building .accordionButton { clear: both; padding-bottom: 10px; cursor: pointer; }
+#companies .content-section .buildings-wrapper .building .accordionButton h4 { float: left; }
 #companies .content-section .buildings-wrapper .building .accordionButton h5 { text-align: right; font-size: 21px; }
 #companies .content-section .buildings-wrapper .building .companies-list { display: none; text-align: left; padding: 10px 0; overflow: hidden; }
 #companies .content-section .buildings-wrapper .building .companies-list .company-link { float: left; width: 250px; }
