--- a/sites/all/themes/clim/sass/_cirro.sass
+++ b/sites/all/themes/clim/sass/_cirro.sass
@@ -367,3 +367,16 @@ article.content-section
 
 .page-user-password #forgot
 	display: none
+
+#map-info
+	hr
+		margin-bottom: 20px
+.app-link
+	width: 350px
+	margin: 0 auto 40px auto
+.apple-link
+	float: left
+	width: 150px
+.android-link
+	float: right
+	width: 150px
